# amdgpu-snippet

./: CMakeLists.txt  get-deps.sh  insert-amdgpu-snippet.cpp
